<resources>
    <string name="app_name">On2Cook</string>
    <string name="content">A Revolutionary Smart Cooking Device with Combination Cooking Technology. ◉ World\'s Fastest ◉ Proven to be the Healthiest ◉ Cost &amp; Energy Saving.</string>
    <string name="txt_cooking">Cooking</string>
    <string name="text_something">Something..</string>
    <string name="txt_home">Home</string>
    <string name="txt_select_audio">Please select record to record audio.</string>
    <string name="txt_warn_utc">Utc configuration failed</string>
    <string name="txt_busy">Device is Busy</string>
    <string name="txt_alerts">Alerts</string>
    <string name="txt_logs">Logs</string>
    <string name="txt_already_exits">Already exists</string>
    <string name="txt_done">Done</string>
    <string name="txt_week">Week</string>
    <string name="txt_like_to">Cook with world\'s fastest cooking device</string>
    <string name="txt_cook">Cook</string>
    <string name="txt_shop">Shop</string>
    <string name="txt_inventory">Inventory</string>
    <string name="txt_explore">Explore</string>
    <string name="txt_plan">Plan</string>
    <string name="txt_ordering">Ordering</string>
    <string name="log_viewer_waiting">Waiting\u2026</string>
    <string name="log_viewer_sending">Sending READLOG=%1$s\u2026</string>
    <string name="log_viewer_ack">Command acknowledged, waiting for data\u2026</string>
    <string name="log_viewer_receiving">Receiving data\u2026</string>
    <string name="log_viewer_parsing">Parsing\u2026</string>
    <string name="log_viewer_done_csv">&#10003; %1$d rows (%2$s)</string>
    <string name="log_viewer_done_raw">&#10003; Raw data (%1$s)</string>
    <string name="log_viewer_empty_state">File received but contained no data</string>
    <string name="log_viewer_empty_file">— file is empty —</string>
    <string name="log_viewer_bytes_zero">0 B</string>
    <string name="log_viewer_export_csv">Export as CSV</string>
    <string name="log_viewer_copy_raw">Copy Raw</string>
    <string name="log_viewer_no_data">No data to export</string>
    <string name="log_viewer_copied">Copied to clipboard</string>
    <string name="text_view_paired_devices">Paired Devices</string>
    <string name="text_view_new_devices">Available Devices</string>
    <string name="text_view_connected_devices">Connected Devices</string>
    <string name="button_scan_for_new_devices">Scan For New Devices</string>
    <string name="label_devices">Bluetooth Devices</string>
    <string name="does_not_have_bluetooth">This Device Does not Support Bluetooth</string>
    <string name="no_paired_devices">No Paired Bluetooth Devices Found</string>
    <string name="label_searching">Searching…</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_disconnect">Device Disconnected</string>
    <string name="title_activity_bluetooth_auto_pair">BluetoothAutoPairActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_stop_fry_mode_for_Stop_oil_level">Please stop fry mode for change oil level</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_flames">Flames</string>
    <string name="txt_microwave">Microwave</string>
    <string name="txt_recent_activity">Recently Played Recipes</string>
    <string name="txt_recent_added">Added Recipe</string>
    <string name="txt_see_all">See all</string>
    <string name="txt_medium">Medium</string>
    <string name="txt_quick_access">Quick Access</string>
    <string name="txt_action">Action</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_modes">Modes</string>
    <string name="txt_manual">Manual</string>
    <string name="txt_recommended">Recommended</string>
    <string name="txt_quick_fry_mode">Quick Fry Mode</string>
    <string name="txt_fry_mode">Fry Mode</string>
    <string name="txt_sign_plus">+</string>
    <string name="txt_sign_minus">-</string>
    <string name="txt_sign_min">Min</string>
    <string name="txt_threshold">Threshold</string>
    <string name="txt_select_all">Select All</string>
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_no_message">No message found for reason=%d. Consider adding one.</string>
    <string name="txt_back">Back</string>
    <string name="txt_sos">SOS</string>
    <string name="txt_start_ind">Induction</string>
    <string name="txt_started">Recipe Already Started</string>
    <string name="txt_recipe_delete_successfully">Recipe Deleted successfully</string>
    <string name="txt_delete_successfully">Deleted successfully</string>
    <string name="txt_sent_successfully">Sent successfully</string>
    <string name="txt_start_mag">Microwave</string>
    <string name="txt_stirrer">Stirrer</string>
    <string name="txt_sprinkle">Sprinkle</string>
    <string name="txt_spray">Spray</string>
    <string name="txt_power_saving_time">Power saving time</string>
    <string name="txt_mag_started">Magnetron Started</string>
    <string name="txt_mag_paused">Magnetron Paused</string>
    <string name="txt_ind_paused">Induction paused</string>
    <string name="txt_ind_started">Induction Started</string>
    <string name="txt_overcook">Food is Overcooked Please Take </string>
    <string name="txt_cooked">Food is Cooked</string>
    <string name="strShortSec">Second is too short for update</string>
    <string name="strMaxTimeForFryModeMicrowave">Reached maximum time</string>
    <string name="strPleaseResumeMicrowave">Please resume microwave</string>
    <string name="strStartMag">Please start Magnetron</string>
    <string name="strConnect">Please connect to device</string>
    <string name="strOn2cookai">You have pressed on2cook ai button</string>
    <string name="strSelectedDeviceIsNotConnected">Selected device is not connected</string>
    <string name="strEditRecipe">Recipe name too long!</string>
    <string name="strNameLong">Name too long!</string>
    <string name="strNoRecipes">Please create recipe or import recipe</string>
    <string name="strPump">Please add count to start pump</string>
    <string name="strPleaseAddMlToStartSpray">Please add ml to start spray</string>
    <string name="strPleaseEnterMinimumTenMlToStartSpray">Please enter minimum 10 ml to start spray</string>
    <string name="strPowerMin">Reached minimum power</string>
    <string name="strPowerMax">Reached maximum power</string>
    <string name="strStartInd">Please start induction</string>
    <string name="strStartIndOrMag">Please start induction or microwave</string>
    <string name="all_recipes">All Recipes</string>
    <string name="strRecipeCopied">Recipe Copied</string>
    <string name="strPleaseStartFryMode">Please start fry mode</string>
    <string name="strSprinkleIsAlreadyRunning">Sprinkle is already running</string>
    <string name="strSprayIsAlreadyRunning">Spray is already running</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="error_occured">Error occurred! </string>
    <string name="this_app_need_permissions">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_location_permissions">This app needs location permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_precise_location_permissions">This app needs precise location permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_nearby_devices_permissions">This app needs scan nearby devices permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_nearby_devices_location_permissions">This app needs location and scan nearby devices permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_nearby_devices_precise_location_permissions">This app needs precise location and scan nearby devices permission to use this feature. You can grant them in app settings.</string>
    <string name="this_app_need_gps_permissions">This app needs device location, which uses Google\'s location service. You can grant them in settings.</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="cancel">cancel</string>
    <string name="txt_quickstart">Device is in QuickStart Mode</string>
    <string name="txt_recipemode">Device is in Cooking Mode</string>
    <string name="txt_prep">Add Preparation Steps</string>
    <string name="txt_instr">Add Instruction Steps</string>
    <string name="txt_recipe_detail">Recipe Detail</string>
    <string name="title_activity_create_recipe_main">CreateRecipeActivityMain</string>
    <string name="title_recipe">Detail</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_instructions">Instructions</string>
    <string name="txt_time">Time</string>
    <string name="txt_audio_type">Select audio type</string>
    <string name="txt_audio_type_content">Choose the appropriate category for the audio:</string>
    <string name="txt_device_name">Enter device name</string>
    <string name="txt_error">Error</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_name_on2cook">Name an On2Cook Device</string>
    <string name="txt_already_added">Already added with this name please rename an on2cook device</string>
</resources>