<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/dark_grey"
        app:cardCornerRadius="@dimen/dp_10">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewAppLogo"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_20"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTitle"
                    style="@style/semi_bole_16_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/txt_name_on2cook"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewAppLogo"
                    tools:text="Name an On2Cook Device" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMessage"
                    style="@style/regular_16_light_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dp_20"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/txt_already_added"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnDone"
                    style="@style/semi_bold_12_dark_grey_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/ic_round_corner_button_orange_deselect"
                    android:paddingStart="@dimen/dp_35"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_35"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/txt_done"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDeviceName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDeviceName"
                    style="@style/et_regular_14_light_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/txt_device_name"
                    android:padding="@dimen/dp_10"
                    android:paddingHorizontal="@dimen/dp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancel"
                    style="@style/semi_bold_12_dark_grey_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/ic_round_corner_button_white"
                    android:paddingStart="@dimen/dp_35"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingEnd="@dimen/dp_35"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnDone"
                    app:layout_constraintTop_toBottomOf="@+id/etDeviceName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>